fix spacing contact

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,7 +375,7 @@ section {
 }
 
 .contact-footer {
-    padding-bottom:100px;
+    padding-bottom:150px;
 }
 
 
